--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "react-loader-spinner": "^5.0.10",
+    "react-toastify": "^8.1.0"
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
